--- a/src/Home.css
+++ b/src/Home.css
@@ -1,22 +1,27 @@
 .row_posters {
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    /* padding: 10px; */
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  padding: 10px;
 }
 
 .row_posters::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .row_poster {
-    width: 100%;
-    object-fit: contain;
-    max-height: 100px;
-    margin-right: 10px;
-    transition: transform 450ms;
+  width: 100%;
+  object-fit: contain;
+  max-height: 100px;
+  margin-right: 10px;
+  transition: transform 450ms;
+  border-radius: 10px;
 }
 
 .row_poster:hover {
-    transform: scale(1.08);
+  transform: scale(1.08);
+}
+
+.header {
+  text-align: center;
 }
