--- a/src/pages/video/styles/index.css
+++ b/src/pages/video/styles/index.css
@@ -1,5 +1,5 @@
 body {
-  background: #eeeeee;
+  background: transparent;
 }
 
 .container {
@@ -41,12 +41,12 @@ video {
   width: 100%;
   max-width: 500px;
   flex-wrap: wrap;
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  background: transparent;
+  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1); */
+  /* backdrop-filter: blur(4px); */
+  /* -webkit-backdrop-filter: blur(4px); */
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: none;
   transform: translateY(150%);
   transition: all 0.3s ease-in-out;
 }
@@ -60,7 +60,7 @@ video {
 
 .actions button i {
   background-color: none;
-  color: white;
+  color: red;
   font-size: 30px;
 }
 
@@ -79,7 +79,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 input[type="range"]::-moz-range-progress {
-  background: white;
+  background: red;
 }
 
 .velocity {
@@ -101,6 +101,6 @@ input[type="range"]::-moz-range-progress {
 
 .mute-btn i {
   background-color: none;
-  color: white;
+  color: red;
   font-size: 20px;
 }
