--- a/src/components/Notification/styles/index.css
+++ b/src/components/Notification/styles/index.css
@@ -8,6 +8,7 @@
   padding-left: 20px;
   display: flex;
   flex-direction: row;
+  border-radius: 5px;
 }
 
 .ratings {
@@ -19,8 +20,8 @@
 .rating-content {
     margin-left: 50px;
     width: 40%;
-    height: 80%;
+    /* height: 80%; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
