--- a/src/pages/NotificationPage/styles/index.css
+++ b/src/pages/NotificationPage/styles/index.css
@@ -1,6 +1,7 @@
 .notification-container {
     color: white;
     width: 700px;
-    margin-top: 100px;
     margin: auto;
+    margin-top: 50px;
+    margin-bottom: 70px;
 }
