--- a/src/components/Notification/styles/index.css
+++ b/src/components/Notification/styles/index.css
@@ -8,6 +8,15 @@
   padding-left: 20px;
   display: flex;
   flex-direction: row;
+  border-radius: 5px;
+}
+
+.notification-image {
+  border-radius: 5px;
+}
+
+.notification-title {
+  font-size: 18px;
 }
 
 .ratings {
