--- a/src/components/navbar/styles/index.css
+++ b/src/components/navbar/styles/index.css
@@ -1,16 +1,16 @@
 .navbar {
   color: white;
-  position: relative;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top: 0px;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  width: 95%;
+  align-items: center;
+  width: 100%;
   justify-content: space-between;
-  height: 80px;
+  height: 60px;
   overflow: hidden;
+  z-index: 300;
 }
 
 .options {
