--- a/src/pages/home/styles/index.css
+++ b/src/pages/home/styles/index.css
@@ -6,24 +6,22 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0px;
+  overflow: hidden;
 }
 
-.container-home::before {
-  content: "";
+.container-overlay {
   display: block;
-  position: absolute;
-  background-color: #000;
-  opacity: 0.3;
+  background-color: #00000033;
   width: 100%;
-  height: 550px;
+  height: 100%;
+  padding-top: 100px;
+  padding-left: 30px;
 }
 
 .side-home {
   color: white;
   position: relative;
-  width: 250px;
-  margin-top: 40px;
-  margin-left: 30px;
+  width: 280px;
 }
 
 .title-home {
@@ -32,16 +30,19 @@
   margin-bottom: 15px;
 }
 
+.description-home {
+  line-height: 1.2;
+}
+
 .rating-home {
   color: white;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   font-size: small;
-  margin-left: 30px;
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 250px;
+  width: 280px;
 }
 
 .imdb {
@@ -57,6 +58,7 @@
   display: flex;
   align-items: center;
   height: 30px;
+  margin-left: 10px;
 }
 
 .btns {
@@ -65,7 +67,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-left: 30px;
   width: 250px;
   position: relative;
 }
