--- a/src/pages/notification/styles/index.css
+++ b/src/pages/notification/styles/index.css
@@ -1,6 +1,7 @@
 .notification-container {
     color: white;
     width: 700px;
-    margin-top: 100px;
     margin: auto;
+    padding-top: 100px;
+    height: 100vh;
 }
