--- a/src/pages/home/styles/index.css
+++ b/src/pages/home/styles/index.css
@@ -100,9 +100,9 @@
 }
 
 .img1 {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
   object-fit: cover;
 }
 
