--- a/src/components/setting-left/styles/index.css
+++ b/src/components/setting-left/styles/index.css
@@ -6,8 +6,9 @@
     margin-top: 70px;
     position: fixed;
     padding-top: 50px;
+    /* padding-bottom: 50px; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
