--- a/src/components/list-tile/styles/index.css
+++ b/src/components/list-tile/styles/index.css
@@ -1,7 +1,7 @@
 .list-tile-component {
   width: 100%;
   height: 100px;
-  background-color: #7a7c80;
+  background-color: #696969;
   margin-bottom: 20px;
   padding: 10px;
   padding-left: 20px;
@@ -27,10 +27,10 @@
 }
 
 .rating-content {
-    margin-left: 50px;
-    width: 40%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  margin-left: 50px;
+  width: 40%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
