--- a/src/pages/video/styles/index.css
+++ b/src/pages/video/styles/index.css
@@ -1,4 +1,4 @@
-body {
+abody {
   background: transparent;
 }
 
@@ -33,22 +33,22 @@ video {
 
 .controls {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   position: absolute;
-  bottom: 30px;
-  padding: 14px;
+  /* bottom: 30px; */
   width: 100%;
-  max-width: 500px;
+  height: 100%;
+  /* max-width: 00px; */
   flex-wrap: wrap;
   background: transparent;
   /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1); */
   /* backdrop-filter: blur(4px); */
   /* -webkit-backdrop-filter: blur(4px); */
-  border-radius: 10px;
   border: none;
-  transform: translateY(150%);
-  transition: all 0.3s ease-in-out;
+  transform: translateY(100%);
+  transition: all 0.5s ease-in-out;
 }
 
 .actions button {
@@ -114,4 +114,31 @@ input[type="range"]::-moz-range-progress {
 
 .full-screen:hover {
   transform: scale(1.3);
+}
+
+.btn-grp {
+  margin-top: 5%;
+  margin-left: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 20%;
+}
+
+.time-control {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0px;
+}
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 30%;
+  margin: auto;
 }
