--- a/src/components/video/styles/index.css
+++ b/src/components/video/styles/index.css
@@ -19,6 +19,7 @@ video {
 }
 
 .video-wrapper {
+  z-index: 300;
   width: 100%;
   max-width: 700px;
   position: relative;
@@ -33,6 +34,7 @@ video {
 }
 
 .controls {
+  z-index: 200;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,11 +50,19 @@ video {
   /* backdrop-filter: blur(4px); */
   /* -webkit-backdrop-filter: blur(4px); */
   border: none;
-  transform: translateY(100%);
+  /* transform: translateY(100%); */
   transition: all 0.5s ease-in-out;
+  transition-property: opacity;
+  opacity: 0;
+}
+
+.video-wrapper:hover .controls {
+  /* transform: translateY(0%); */
+  opacity: 1;
 }
 
 .actions button {
+  z-index: 100;
   background: none;
   border: none;
   outline: none;
@@ -60,6 +70,7 @@ video {
 }
 
 .actions button i {
+  z-index: 50;
   background-color: none;
   color: red;
   font-size: 30px;
@@ -111,6 +122,7 @@ input[type="range"]::-moz-range-progress {
   outline: none;
   border: none;
   cursor: pointer;
+  z-index: 50;
 }
 
 .full-screen:hover {
@@ -119,11 +131,13 @@ input[type="range"]::-moz-range-progress {
 
 .btn-grp {
   margin-top: 5%;
-  margin-left: 70%;
+  margin-left: 10%;
+  margin-right: 8%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 20%;
+  width: 82%;
+  z-index: 100;
 }
 
 .time-control {
@@ -133,6 +147,7 @@ input[type="range"]::-moz-range-progress {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0px;
+  z-index: 100;
 }
 
 .actions {
@@ -142,4 +157,11 @@ input[type="range"]::-moz-range-progress {
   justify-content: space-between;
   width: 30%;
   margin: auto;
+  z-index: 100;
+}
+
+.video-title {
+  /* position: fixed; */
+  margin-left: 0%;
+  margin-right: 62%;
 }
