--- a/src/pages/guest/styles/index.css
+++ b/src/pages/guest/styles/index.css
@@ -21,6 +21,7 @@
 } */
 
 .btn {
+  cursor: pointer;
   background-color: red;
   color: white;
   border: none;
@@ -39,6 +40,7 @@
 }
 
 .btn1 {
+  cursor: pointer;
   background-color: red;
   color: white;
   border: none;
