--- a/src/components/setting-right/styles/index.css
+++ b/src/components/setting-right/styles/index.css
@@ -1,3 +1,8 @@
+.setting-right-wrapper {
+    background-color: #282828;
+    
+}
+
 .setting-right-container {
   position: fixed;
   margin-top: 70px;
@@ -7,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #282828;
 }
 
 .btn-done {
@@ -15,4 +21,5 @@
   width: 46%;
   height: 50px;
   margin-top: 570px;
+  background-color: #282828;
 }
