--- a/src/pages/guest/styles/index.css
+++ b/src/pages/guest/styles/index.css
@@ -5,7 +5,7 @@
 }
 
 .outer-container {
-  background-image: url("../../../images/Background.jpeg");
+  background-image: url("../../../images/backgrounds/9wzdncrfj3tj-background.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,6 +19,22 @@
 /* p {
   font-size: 50px;
 } */
+
+.outer-container-overlay {
+    height: 100%;
+    width: 100%;
+    background-color: #0000004D;
+    z-index: 300;
+}
+
+
+.inner-container {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  width: min-content;
+}
 
 .btn {
   cursor: pointer;
