--- a/src/components/frame-video/styles/index.css
+++ b/src/components/frame-video/styles/index.css
@@ -2,12 +2,10 @@ abody {
   background: transparent;
 }
 
-.container-video {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  color: white;
+.container-iframe {
+  width: 100%;
+  /* height: 100%; */
+  margin: auto;
 }
 
 h1 {
@@ -18,18 +16,25 @@ video {
   width: 100%;
 }
 
-.video-wrapper {
-  z-index: 300;
+iframe {
   width: 100%;
+  border: none;
+}
+
+.iframe-wrapper {
+  z-index: 300;
+  width: 70%;
   max-width: 700px;
   position: relative;
   display: flex;
   justify-content: center;
   overflow: hidden;
   border-radius: 10px;
+  border: none;
+  margin: auto;
 }
 
-.video-wrapper:hover .controls {
+.iframe-wrapper:hover .controls {
   transform: translateY(0%);
 }
 
@@ -56,7 +61,7 @@ video {
   opacity: 0;
 }
 
-.video-wrapper:hover .controls {
+.iframe-wrapper:hover .controls {
   /* transform: translateY(0%); */
   opacity: 1;
 }
