--- a/src/pages/home/styles/index.css
+++ b/src/pages/home/styles/index.css
@@ -1,8 +1,9 @@
 .recent-activity {
   position: relative;
-  color: white;
-  margin-top: 30px;
-  margin-left: 30px;
+  /* color: white; */
+  /* margin-top: 30px; */
+  /* width: 95%; */
+  margin: auto;
 }
 
 .img1 {
